CRITICAL FIX: Remove hardcoded localhost CORS in SecurityConfig, use environment variable